Fix positioning of header on small screen.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -36,6 +36,10 @@ h1{
   text-align: center;
 }
 
+.SmHeader {
+  background-color: #FFFFFF;
+}
+
 /* NAVBAR */
 .NavSmScreen{
   display: none;
@@ -90,6 +94,8 @@ h1{
   }
   .NavSmScreen{
     display: block;
+    position:fixed;
+    top: 0px;
   }
 
   /* PAGE PANELS */
